<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.249"
        android:gravity="center">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="190dp"
            android:layout_height="190dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="28dp"
            app:srcCompat="@drawable/tigerlogo" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/username_registerID"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="15dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:inputType="textPersonName" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_registerID"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="15dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/pass_registerID"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="15dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="35dp" />

        <Button
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:id="@+id/signUp_btn"
            android:text="@string/sign_up"
            android:textSize="25sp"
            android:background="@drawable/rounded_btn"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/infoTextReg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/have_an_account" />

            <TextView
                android:id="@+id/signIn_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="navigate_sign_in"
                android:text="@string/sign_in"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>